--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "overtrue/laravel-lang": "^3.0"
+        "overtrue/laravel-lang": "^3.0",
+        "yansongda/laravel-pay": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
