完善支付后逻辑

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,11 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ORDER_TTL=1800
+
+# 支付宝支付
+ALI_APP_ID=
+
+# 微信支付
+WECHAT_APP_ID=
+WECHAT_MCH_ID=
+WECHAT_KEY=
