--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "brick/math": "^0.8.15",
+        "elasticsearch/elasticsearch": "^7.8",
         "encore/laravel-admin": "^1.8",
         "endroid/qr-code": "^3.8",
         "fideloper/proxy": "^4.2",
@@ -18,7 +20,6 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "moontoast/math": "^1.2",
         "overtrue/laravel-lang": "^3.0",
         "yansongda/laravel-pay": "^2.2"
     },
