--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ORDER_TTL=1800
+SECKILL_ORDER_TTL=600
 
 # 支付宝支付
 ALI_APP_ID=
