--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/horizon": "^4.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "laravolt/avatar": "^4.0",
         "overtrue/laravel-lang": "^3.0",
         "yansongda/laravel-pay": "^2.2"
     },
